<resources>
    <string name="app_name">TripCollector</string>
    <string name="facebook_app_id">1478025869001655</string>
    <string name="fb_login_protocol_scheme">fb1478025869001655</string>

    <!--Sign In -->
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="signin_email">회원가입 및 이메일 로그인</string>
    <string name="signin_facebook">Facebook으로 로그인</string>
    <string name="signup_complete">회원가입 성공</string>
    <string name="signin_complete">로그인 성공</string>
    <string name="signout">로그아웃</string>
    <string name="signout_success">로그아웃 성공</string>
    <string name="signout_fail">로그아웃 실패</string>
    <string name="signout_fail_null">이메일과 비밀번호를 입력해주세요</string>
    <string name="title_map">지도</string>
    <string name="title_list">여행 리스트</string>
    <string name="title_search">여행 검색</string>
    <string name="title_setting">설정</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addTrip">기록 추가</string>

    <string-array name="si_do">
        <item>선택하세요</item>
        <item>특별/광역시</item>
        <item>경기도</item>
        <item>강원도</item>
        <item>충청북도</item>
        <item>충청남도</item>
        <item>경상북도</item>
        <item>경상남도</item>
        <item>전라북도</item>
        <item>전라남도</item>
        <item>제주특별자치시</item>
        <item>직접입력</item>
    </string-array>

    <string-array name="si_do_0">
        <item>선택하세요</item>
    </string-array>

    <string-array name="si_do_1">
        <item>서울</item>
        <item>인천</item>
        <item>대전</item>
        <item>세종</item>
        <item>광주</item>
        <item>울산</item>
        <item>부산</item>
        <item>대구</item>
    </string-array>

    <string-array name="si_do_2">
        <item>가평</item>
        <item>고양</item>
        <item>과천</item>
        <item>광명</item>
        <item>광주</item>
        <item>구리</item>
        <item>군포</item>
        <item>김포</item>
        <item>남양주</item>
        <item>동두천</item>
        <item>부천</item>
        <item>성남</item>
        <item>수원</item>
        <item>시흥</item>
        <item>안산</item>
        <item>안성</item>
        <item>안양</item>
        <item>양주</item>
        <item>양평</item>
        <item>여주</item>
        <item>연천</item>
        <item>오산</item>
        <item>용인</item>
        <item>의왕</item>
        <item>의정부</item>
        <item>이천</item>
        <item>파주</item>
        <item>평택</item>
        <item>포천</item>
        <item>하남</item>
        <item>화성</item>
    </string-array>

    <string-array name="si_do_3">
        <item>강릉</item>
        <item>고성</item>
        <item>동해</item>
        <item>삼척</item>
        <item>속초</item>
        <item>양구</item>
        <item>양양</item>
        <item>영월</item>
        <item>원주</item>
        <item>인제</item>
        <item>정선</item>
        <item>철원</item>
        <item>춘천</item>
        <item>태백</item>
        <item>평창</item>
        <item>홍천</item>
        <item>화천</item>
        <item>횡성</item>
    </string-array>

    <string-array name="si_do_4">
        <item>괴산</item>
        <item>단양</item>
        <item>보은</item>
        <item>영동</item>
        <item>옥천</item>
        <item>음성</item>
        <item>제천</item>
        <item>증평</item>
        <item>진천</item>
        <item>청주</item>
        <item>충주</item>
    </string-array>

    <string-array name="si_do_5">
        <item>계룡</item>
        <item>공주</item>
        <item>금산</item>
        <item>논산</item>
        <item>당진</item>
        <item>보령</item>
        <item>부여</item>
        <item>서산</item>
        <item>서천</item>
        <item>아산</item>
        <item>예산</item>
        <item>천안</item>
        <item>청양</item>
        <item>태안</item>
        <item>홍성</item>
    </string-array>

    <string-array name="si_do_6">
        <item>경산</item>
        <item>경주</item>
        <item>고령</item>
        <item>구미</item>
        <item>군위</item>
        <item>김천</item>
        <item>문경</item>
        <item>봉화</item>
        <item>상주</item>
        <item>성주</item>
        <item>안동</item>
        <item>영덕</item>
        <item>영양</item>
        <item>영주</item>
        <item>영천</item>
        <item>예천</item>
        <item>울릉</item>
        <item>울진</item>
        <item>의성</item>
        <item>청도</item>
        <item>청송</item>
        <item>칠곡</item>
        <item>포항</item>
    </string-array>

    <string-array name="si_do_7">
        <item>거제</item>
        <item>거창</item>
        <item>고성</item>
        <item>김해</item>
        <item>남해</item>
        <item>밀양</item>
        <item>사천</item>
        <item>산청</item>
        <item>양산</item>
        <item>의령</item>
        <item>진주</item>
        <item>창녕</item>
        <item>창원</item>
        <item>통영</item>
        <item>하동</item>
        <item>함안</item>
        <item>함양</item>
        <item>합천</item>
    </string-array>

    <string-array name="si_do_8">
        <item>고창</item>
        <item>군산</item>
        <item>김제</item>
        <item>남원</item>
        <item>무주</item>
        <item>부안</item>
        <item>순창</item>
        <item>완주</item>
        <item>익산</item>
        <item>임실</item>
        <item>장수</item>
        <item>전주</item>
        <item>정읍</item>
        <item>진안</item>
    </string-array>

    <string-array name="si_do_9">
        <item>강진</item>
        <item>고흥</item>
        <item>곡성</item>
        <item>광양</item>
        <item>구례</item>
        <item>나주</item>
        <item>담양</item>
        <item>목포</item>
        <item>무안</item>
        <item>보성</item>
        <item>순천</item>
        <item>신안</item>
        <item>여수</item>
        <item>영광</item>
        <item>영암</item>
        <item>완도</item>
        <item>장성</item>
        <item>장흥</item>
        <item>진도</item>
        <item>함평</item>
        <item>해남</item>
        <item>화순</item>
    </string-array>

    <string-array name="si_do_10">
        <item>서귀포</item>
        <item>제주</item>
    </string-array>

    <string-array name="si_do_for_filter">
        <item>전체</item>
        <item>특별/광역시</item>
        <item>경기도</item>
        <item>강원도</item>
        <item>충청북도</item>
        <item>충청남도</item>
        <item>경상북도</item>
        <item>경상남도</item>
        <item>전라북도</item>
        <item>전라남도</item>
        <item>제주특별자치시</item>
    </string-array>

</resources>
