<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

                xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <ImageView
            app:srcCompat="@drawable/login_img" android:id="@+id/login_img" android:layout_height="match_parent"
            android:layout_width="match_parent" android:scaleType="centerCrop" android:visibility="visible"
            android:alpha="0.5"
            android:contentDescription="TODO"/>
    <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
    />

    <LinearLayout
            android:id="@+id/signin_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:orientation="vertical" android:gravity="center">

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:id="@+id/image_logo"
                android:gravity="center"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"

                android:contentDescription="@string/app_name"
                android:src="@drawable/title"
        />
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp">

            <EditText
                    android:id="@+id/email_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
            />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                >

            <EditText
                    android:id="@+id/password_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/password"
                    android:inputType="textPassword"
            />
        </android.support.design.widget.TextInputLayout>

        <Button
                android:id="@+id/email_login_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="35dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:text="@string/signin_email"
                android:theme="@style/ButtonStyle"
        />


        <Button
                android:id="@+id/facebook_login_button"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"

                android:background="@drawable/btn_signin_facebook"
                android:text="@string/signin_facebook"
                android:textColor="@color/colorWhite"
        />


    </LinearLayout>


</RelativeLayout>